# passion

./: .gitignore  GEMINI.md  README.md  pyproject.toml  pytest.ini  t.txt
.passion/: config.json.example
src/passion/: main.py
src/passion/agent/: passion_agent.py
src/passion/config/: loader.py
src/passion/display/: __init__.py  display_manager.py
src/passion/display/components/: __init__.py  display_styles.py  message_display_handler.py  simple_line_limiter.py  stream_display_manager.py
src/passion/interface/: cli.py
src/passion/log/: manager.py
src/passion/prompt/: system.py
src/passion/tools/: file_tools.py  planning.py  registry.py
src/passion/utils/: common.py
test/passion/agent/: test_passion_agent.py  test_passion_agent_tools.py
