[project]
name = "passion"
version = "0.1.0"
description = "A custom AI agent based on AgentScope"
readme = "GEMINI.md"
requires-python = ">=3.12"
dependencies = [
    "agentscope",
    "prompt_toolkit",
]

[project.scripts]
passion = "passion.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/passion"]
